remove commented method, fix deprecate new Longs